crates/common/eurora-tools-macros/tests/fail/client_local_with_target.stderr
error: tool method has too many parameters; client_local/server_local sources must not declare a target — expected `(&self, args: <ArgsType>)`
  --> tests/fail/client_local_with_target.rs:19:17
   |
19 |         target: &BrowserOrigin,
   |                 ^^^^^^^^^^^^^^
